--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+<div class="one">
+    <div class="two">
+        <div class="three"></div>
+    </div>
+</div>
+
     <script src="./script.js"></script>
 </body>
 </html>
